2010-02-19  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #12870: Login News missing styling for links (Thanks to Steffen Gebert)
	* Added feature #13131: Add API to add stylesheet directories (Thanks to Steffen Gebert)

2010-02-14  Christian Kuhn  <lolli@schwarzbu.ch>

	* Follow-up to #13448: Do not unset $typo3CacheFactory singleton

2010-02-14  Xavier Perseguers  <typo3@perseguers.ch>

	* Raised DBAL version from 1.1.0 to 1.1.1
	* Fixed bug #12829: ALTER TABLE is not able to parse length restriction in index creation

2010-02-14  Andreas Otto  <andreas@otto-hanika.de>

	* Fixed bug #13380: Recursive deletion of alternative page languages

2010-02-13  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #6196: IFNULL operator cannot be parsed
	* Fixed bug #13529: DISTINCT should not be used as a function

2010-02-11  Xavier Perseguers  <typo3@perseguers.ch>

	* Follow-up of #13504: Using TRUNCATE instead of TRUNCATETABLE as public DB API

2010-02-10  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #13504: Cannot parse TRUNCATE TABLE in install tool

2010-02-09  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #13490: Where clause 0=0 cannot be parsed

2010-02-08  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #13464: ORA-00920: invalid relational operator in module statistics [indexed_search]
	* Fixed bug #13463: Modfunc2 (statistics) is not compatible with DBAL [indexed_search]

2010-02-08  Steffen Kamper  <info@sk-typo3.de>

	* Reverted Follow-up to #13448: Unset another variable

2010-02-08  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #13456: Typo in rsaauth ext_tables.sql
	* Fixed bug #13257: PHP warning stristr() in Configuration -> Search under PHP 5.3 (thanks to Steffen Gebert)

2010-02-07  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #1822: There is no API to list tables in theWeb->Page module (thanks to Franz Holzinger)

2010-02-07  Christian Kuhn  <lolli@schwarzbu.ch>

	* Follow-up to #13448: Unset another variable